--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="todo">
-      <form action="" class="form" id="form">
+      <form class="form" id="form" (submit)="validarFormulario($event)">
         <div class="contenedor">
           <h1>
             Registro de Estudiantes con Capacidades Especiales en la ULEAM
